# watchtv

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/db/: mod.rs
src-tauri/src/download/: mod.rs
src-tauri/src/playlist/: mod.rs
src-tauri/src/transcode/: mod.rs
src/components/navigation/: app-nav.tsx  content-tabs.tsx  index.ts
src/components/player/: VideoPlayer.tsx  buttons.tsx  player-channel-info.tsx  player-container.tsx  player-error.tsx  player-loading.tsx  sliders.tsx  use-player-events.ts  use-player-source.ts  use-plyr.ts  video-player.tsx
src/components/playlist/: AddPlaylistModal.tsx  add-playlist-modal.tsx
src/components/search/: spotlight-search.tsx
src/components/sidebar/: category-sidebar.tsx  index.ts  playlist-sidebar.tsx  virtual-list.tsx
src/components/ui/: button.tsx  command.tsx  dialog.tsx  download-toast.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  sonner.tsx  tabs.tsx  tooltip.tsx  unavailable-message.tsx
src/hooks/: index.ts  use-playlist-data.tsx
src/lib/: storage.ts
src/lib/api/: iptv.ts
src/routes/: __root.tsx  index.tsx  playlist.$playlistId.tsx
src/stores/: index.ts  player-store.ts
src/types/: index.ts
